# voice_gpt

./: README.md  ar_generator.py  ar_test.py  chatpgt.py  gpt_main.py  gpt_process.py  realsense_recognition.py  voice2text.py
chat_rover/: package.xml  setup.cfg  setup.py
chat_rover/chat_rover/: ar_node.py  gpt1_node.py  gpt2_node.py  gpt_process.py  object_recognition.py  qr_node.py  voice2text.py  vosk_node.py  yolo_node.py
chat_rover/chat_rover/prompt/: prompt1.txt  prompt2.txt
chat_rover/launch/: chat_rover.launch.py  test.launch.py
chat_rover/model/: .gitignore  readme.txt
chat_rover_bt/: CMakeLists.txt  package.xml
chat_rover_bt/config/: main_bt.xml
chat_rover_bt/include/: my_action_node.hpp  my_ros_node.hpp
chat_rover_bt/src/: action_client.cpp  action_server.cpp  main_node.cpp  motor_power_cliant.cpp  pos2vel_node.cpp  pos2vel_node2.cpp  test_cliant.cpp  test_server.cpp  twist_return.cpp
chat_rover_bt/src/oldfile/: action_client.cpp  pos2vel_node.cpp
chat_rover_desktop/: package.xml  setup.cfg  setup.py
chat_rover_desktop/chat_rover_desktop/: llava_node.py
chatrover_msgs/: CMakeLists.txt  package.xml
chatrover_msgs/action/: SendPos.action
chatrover_msgs/msg/: ObjectPosition.msg
chatrover_msgs/srv/: ImageText.srv  ObjectPosition.srv
desktop_pkg/: package.xml  setup.cfg  setup.py
desktop_pkg/desktop_pkg/: llava_node.py  sample.py
